deploy/clusters/management/projects/network/components/httproutes/httproutes.gen.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: argocd
    app.holos.run/cluster.name: management
    app.holos.run/component.name: httproutes
    app.holos.run/project.name: network
    app.holos.run/team.name: platform
    argocd.argoproj.io/instance: network-httproutes
  name: argocd
  namespace: istio-ingress
spec:
  hostnames:
  - argocd.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: bank
    app.holos.run/cluster.name: management
    app.holos.run/component.name: httproutes
    app.holos.run/project.name: network
    app.holos.run/team.name: platform
    argocd.argoproj.io/instance: network-httproutes
  name: bank
  namespace: istio-ingress
spec:
  hostnames:
  - bank.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: frontend
      namespace: bank-frontend
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
